extraApps/Dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashboard
spec:
  selector:
    run: dashy
  ports:
    - port: 80
      targetPort: 80
      name: client
